--- a/app/views/smartrent/pages/_properties_slider.html.erb
+++ b/app/views/smartrent/pages/_properties_slider.html.erb
@@ -15,7 +15,7 @@
           <% end %>
         </div>
       <% i+=1 %>
-    <% if i%2 == 0 || all_properties.count % 2 == 1 %>
+    <% if i%2 == 0 || properties.count % 2 == 1 %>
       </div>
     <% end %>
     <% end %>
