--- a/app/views/smartrent/apartments/index.html.erb
+++ b/app/views/smartrent/apartments/index.html.erb
@@ -18,9 +18,7 @@
       </div>
     </div>
     <div class="locations" id="locationsBox">
-      <% @apartments_grouped_by_states.each do |state,apartment|%>
-        <%= render partial: "row", locals: {apartment: apartment, state: state}%>
-      <% end%>
+        <%= render partial: "search_results" %>
     </div>
   </div>
 </section>
