--- a/app/views/smartrent/properties/index.html.erb
+++ b/app/views/smartrent/properties/index.html.erb
@@ -57,8 +57,7 @@
           </div>
         <% end %>
       </div>
-      <div id="map" class="results map-results hidden">
-      </div>
+      <div id="map" class="results map-results"></div>
     </div>
   </div>
 </section>
