--- a/app/views/smartrent/contacts/new.html.erb
+++ b/app/views/smartrent/contacts/new.html.erb
@@ -5,6 +5,7 @@
     </div>
   </div>
 </div>
+<%= notice %>
 
 <section class="content">
   <p>At Bozzuto, we’re here to help. So feel free to raise any questions or concerns and we’ll do our best to address them as quickly as possible.</p>
