--- a/app/views/smartrent/properties/_form.html.erb
+++ b/app/views/smartrent/properties/_form.html.erb
@@ -37,15 +37,15 @@
   </div>
   <div class="field">
     <%= f.label :website %><br />
-    <%= f.text_field :website %>
+    <%= f.url_field :website %>
   </div>
   <div class="field">
     <%= f.label :home_page_desc %><br />
     <%= f.text_field :home_page_desc %>
   </div>
   <div class="field">
-    <%= f.label :search_page_sub_title %><br />
-    <%= f.text_field :search_page_sub_title %>
+    <%= f.label :search_page_description %><br />
+    <%= f.text_area :search_page_description %>
   </div>
   <div class="field">
     <%= f.label :description %><br />
@@ -60,12 +60,12 @@
     <%= f.text_field :lng %>
   </div>
   <div class="field">
-    <%= f.label :left_image %><br />
-    <%= f.file_field :left_image %>
+    <%= f.label :image %><br />
+    <%= f.file_field :image %>
   </div>
   <div class="field">
-    <%= f.label :left_image_description %><br />
-    <%= f.text_field :left_image_description %>
+    <%= f.label :image_description %><br />
+    <%= f.text_field :image_description %>
   </div>
   <div class="actions">
     <%= f.submit %>
