--- a/app/views/smartrent/properties/show.html.erb
+++ b/app/views/smartrent/properties/show.html.erb
@@ -2,9 +2,9 @@
 <p id="notice"><%= notice %></p>
   <div class="propDetails clearfix">
     <div class="propPhoto">
-      <%= image_tag @property.left_image %>
+      <%= image_tag @property.image %>
       <div>
-        <%= @property.left_image_description %>
+        <%= @property.image_description %>
       </div>
     </div>
 
@@ -14,14 +14,53 @@
       <div class="address">
         <%= @property.address %>, <%= @property.city %>, <%= @property.state %>
       </div>
-
       <div class="links">
-        <%= link_to "Visit the Website", @property.website, :target => "_blank" %>
+        <% if @property.website.present? %>
+          <%= link_to "Visit the Website", @property.website %>
+        <% end %>
+        <% if @property.video_url.present? %>
+          <br /><%= link_to "View Community Video", @property.video_url, :target => "_blank" %>
+        <% end %>
       </div>
 
       <div class="desc">
         <%= @property.description.html_safe %>
       </div>
+      <% if @property.homes.present? %>
+        <div class="homes">
+        <div class="title">Homes</div>
+          <table class="homesTable">
+            <% @property.homes.where(:featured => false).each do |home| %>
+              <tr>
+                <td class="name"><%= home.name %></td>
+                <td class="info"><%= home.beds %> Bedrooms / <%= home.baths %> Baths / <%= home.sq_ft %> sq. ft.</td>
+                <td class="floorPlanLink">
+                  <a href="javascript:Home.showFloorPlan('floor-plan-<%= home.id %>')">View Floor Plan</a>
+                </td>
+              </tr>
+            <% end %>
+          </table>
+        </div>
+        <div class="fpImageHolder">
+          <% @property.homes.where(:featured => false).each do |home| %>
+            <div class="homeFPImages" id="floor-plan-<%= home.id %>">
+              <% home.floor_plan_images.each do |floor_plan_image| %>
+                <div class="fpImage">
+                  <div class="caption">
+                    <%= floor_plan_image.caption %>
+                  </div>
+                  <div class="image">
+                    <%= link_to floor_plan_image.image.url do %>
+                      <%= image_tag floor_plan_image.url, :width => 124 %>
+                    <% end %>
+                  </div>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+          <div class="clear"></div>
+        </div>
+      <% end %>
     </div>
   </div>
 <% end%>
