home importing and floor plan images importing done

--- a/app/assets/javascripts/smartrent/properties.js.erb
+++ b/app/assets/javascripts/smartrent/properties.js.erb
@@ -48,3 +48,9 @@ $(function(){
     }
   })
 })
+var Home = {
+  "showFloorPlan": function(floor_id){
+    $('.fpImageHolder .homeFPImages').hide();
+    $('#' + floor_id).show();
+  }
+}
