--- a/app/views/smartrent/apartments/_filters.html.erb
+++ b/app/views/smartrent/apartments/_filters.html.erb
@@ -1,6 +1,6 @@
 <div id="contactLeft">
   <div id="search">
-    <%= search_form_for @q, {:remote => true, :class => "apartment_listing"} do |f|%>
+    <%= search_form_for @q, {:class => "apartment_listing"} do |f|%>
       <div class="searchTitle">
         <h1>Search By</h1>
       </div>
