--- a/app/views/smartrent/pages/_properties_slider.html.erb
+++ b/app/views/smartrent/pages/_properties_slider.html.erb
@@ -15,7 +15,7 @@
           <% end %>
         </div>
       <% i+=1 %>
-    <% if i%3 == 0 || (i == (properties.count - 1) && properties.count % 3 == 1) %>
+    <% if i%3 == 0 || i == properties.count %>
       </div>
     <% end %>
     <% end %>
