--- a/app/views/smartrent/residents/statement.html.erb
+++ b/app/views/smartrent/residents/statement.html.erb
@@ -1,7 +1,7 @@
 <div class="member clearfix">
   <div class="memberStatementLeft">
     <div class="saveTitle">
-      <span class="lightBlue"><%= current_user.name %>,</span> You have <span class="lightBlue"><%= number_to_currency current_user.total_saved %></span> Saved.
+      <span class="lightBlue"><%= @resident.name %>,</span> You have <span class="lightBlue"><%= number_to_currency @resident.total_saved %></span> Saved.
     </div>
 
     <div class="saveSubTitle">
@@ -23,11 +23,13 @@
     <h2>Member Profile</h2>
 
     <div class="name">
-      <%= current_user.name %>
+      <%= @resident.name %>
     </div>
 
     <div class="movein">
-      <span class="label">Move-In Date:</span> <%= current_user.move_in_date.to_s(:year_month_day) %>
+      <% if @resident.move_in_date %>
+        <span class="label">Move-In Date:</span> <%= @resident.move_in_date.to_s(:year_month_day) %>
+      <% end %>
     </div>
 
     <h2>Earned Rewards</h2>
@@ -35,7 +37,7 @@
     <h3>Current Community</h3>
 
     <div class="community">
-      <%= current_user.current_community %><br>
+      <%= @resident.current_community %><br>
       <br>
       ,<br>
     </div>
@@ -43,31 +45,31 @@
     <h3>Monthly Awards Amount</h3>
 
     <div class="v">
-      <%= current_user.monthly_awards_amount %>
+      <%= @resident.monthly_awards_amount %>
     </div>
 
     <h3>Months Earned</h3>
 
     <div class="v">
-      <%= current_user.months_earned %>
+      <%= @resident.months_earned %>
     </div>
 
     <h3>Total Earned</h3>
 
     <div class="v">
-      <%= current_user.total_earned %>
+      <%= @resident.total_earned %>
     </div>
 
     <h3>Sign-Up Bonus</h3>
 
     <div class="v">
-      <%= number_to_currency current_user.sign_up_bonus %>
+      <%= number_to_currency @resident.sign_up_bonus %>
     </div>
 
     <h3>Combined Total</h3>
 
     <div class="v total">
-      <%= number_to_currency current_user.total_saved %>
+      <%= number_to_currency @resident.total_saved %>
     </div>
   </div>
 </div>
