--- a/app/views/smartrent/admin/residents/_form.html.erb
+++ b/app/views/smartrent/admin/residents/_form.html.erb
@@ -1,24 +1,147 @@
-<%= form_for([:admin, @resident], {:class => "form-horizontal"}) do |f| %>
+<%= form_for([:admin, @resident], html: {:class => "form-horizontal"}) do |f| %>
   <% if @resident.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@resident.errors.count, "error") %> prohibited this admin_resident from being saved:</h2>
-
-      <ul>
-      <% @resident.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
+    <%= render partial: "shared/form_errors", :locals => {:errors => @resident.errors} %>
   <% end %>
   <fieldset>
     <div class="form-group">
-      <%= f.label :name, :class => "col-md-4 control-label" %>
-      <div class="col-md-6">
+      <%= f.label :name, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
         <%= f.text_field :name, :class => "form-control input-md" %>
       </div>
     </div>
+    <div class="form-group">
+      <%= f.label :email, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :email, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <% if @resident.new_record? %>
+      <div class="form-group">
+        <%= f.label :password, :class => "col-md-2 control-label" %>
+        <div class="col-md-4">
+          <%= f.password_field :password, :class => "form-control input-md" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :password_confirmation, :class => "col-md-2 control-label" %>
+        <div class="col-md-4">
+          <%= f.password_field :password_confirmation, :class => "form-control input-md" %>
+        </div>
+      </div>
+    <% end %>
+    <div class="form-group">
+      <%= f.label :home_phone, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :home_phone, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :work_phone, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :work_phone, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :cell_phone, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :cell_phone, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :company, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :company, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :house_hold_size, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.number_field :house_hold_size, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :pets_count, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.number_field :pets_count, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :contract_signing_date, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.date_select :contract_signing_date, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :apartment_id, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.collection_select :apartment_id, Smartrent::Apartment.all, :id, :title, {:include_blank => "--Select Apartment"}, {:class => "form-control input-md"} %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :status, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.select :status, Smartrent::Resident.statuses.collect{|key,value| [value, key]}, {:include_blank => "--Select Status"}, {:class => "form-control input-md"} %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :type_, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.select :type_, Smartrent::Resident.types.collect{|key,value| [value, key]}, {:include_blank => "--Select Type"}, {:class => "form-control input-md"} %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :move_in_date, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.date_select :move_in_date, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :move_out_date, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.date_select :move_out_date, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :address, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :address, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :city, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :city, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :state, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :state, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :country, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :country, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :zip, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :zip, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <%= f.label :current_community, :class => "col-md-2 control-label" %>
+      <div class="col-md-4">
+        <%= f.text_field :current_community, :class => "form-control input-md" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-md-2 control-label" for="singlebutton"></label>
+      <div class="col-md-4">
+        <%= f.submit :class => "btn btn-primary" %>
+      </div>
+    </div>
   </fieldset>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
 <% end %>
