--- a/app/views/smartrent/admin/residents/index.html.erb
+++ b/app/views/smartrent/admin/residents/index.html.erb
@@ -13,9 +13,9 @@
   <tr>
     <td><%= resident.name %></td>
     <td><%= resident.email %></td>
-    <td><%= resident.apartment %></td>
+    <td><%= resident.apartment.title if resident.apartment %></td>
     <td><%= resident.status %></td>
-    <td><%= link_to 'Show', admin_resident %> | <%= link_to 'Edit', edit_admin_resident_path(admin_resident) %> | <%= link_to 'Destroy', admin_resident, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Show', admin_resident_path(resident) %> | <%= link_to 'Edit', edit_admin_resident_path(resident) %> | <%= link_to 'Destroy', admin_resident_path(resident), method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
