--- a/app/views/smartrent/admin/residents/show.html.erb
+++ b/app/views/smartrent/admin/residents/show.html.erb
@@ -1,5 +1,100 @@
-<p id="notice"><%= notice %></p>
+<div class="row">
+  <div class="col-md-3">
+    <div class="btn-group" role="group" aria-label="...">
+      <%= link_to edit_admin_resident_path(@resident), {:class => "btn btn-default"} do%>
+          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span> Edit
+        <% end%>
+      <button type="button" class="btn btn-default">
+          <span class="glyphicon glyphicon-wrench" aria-hidden="true"></span> Tickets
+      </button>
+      <%= link_to archive_admin_residents_path(@resident) , {:class => "btn btn-default"} do%>
+        <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Archive
+      <% end %>
+    </div>
+    <br />
+    <div class="clearfix"></div>
+    <div class="basic-info resident-box">
+      <div class="">
+        <span class="id">#<%= @resident.id %></span>
+      </div>
+      <div class="">
+        <h3><%= @resident.name %></h3>
+      </div>
+      <div class="">
+        Primary Contact: <span><%= @resident.cell_phone %></span>
+      </div>
+      <div class="">
+        Status: <span><%= @resident.status_text %></span>
+      </div>
+    </div>
+    <div class="contact-info resident-box">
+      <span>Contact Info</span>
+      <div>
+        Work Phone: <span><%= @resident.work_phone %></span><br />
+        Home Phone: <span><%= @resident.home_phone %></span><br />
+        Address: <span><%= @resident.address %></span><br />
+        City: <span><%= @resident.city %></span><br />
+        State: <span><%= @resident.state %></span><br />
+        Country: <span><%= @resident.country %></span><br />
+      </div>
+    </div>
+    <div class="demographics resident-box">
+    </div>
+    <div class="vehicle-info resident-box">
+    </div>
+    <div class="smartrent resident-box">
+      <b>Total:</b> <%= @resident.total_rewards  %><br />
+      <b>Monthly Awards:</b> <%= @resident.monthly_awards_amount %><br />
+      <b>Sign-Up Bonus:</b> <%= @resident.sign_up_bonus %><br />
+      <b>Initial Reward:</b> <%= @resident.initial_reward %><br />
+      <button class="btn btn-primary">View Details</button>
+    </div>
+  </div>
+  <div class="col-md-8">
+    <div class="col-md-4 resident-box resident-top-col">
+      <b>SmartRent Balance</b><br />
+      <div class="col-md-5">
+        <div class="resident-amount-box">
+          <%= number_to_currency @resident.total_rewards %>
+        </div>
+      </div>
+      <div class="col-md-7">
+        <b>Monthly Total:</b> <%= number_to_currency @resident.monthly_awards_amount %><br />
+        <b>Sign-Up Bonus:</b> <%= number_to_currency @resident.sign_up_bonus %><br />
+        <b>Initial Reward:</b> <%= number_to_currency @resident.initial_reward %>
+      </div>
+    </div>
+    <div class="col-md-4 resident-box resident-right-col resident-top-col">
+      <b>SmarRent Status</b><br />
+      <div class="col-md-5">
+        <div class="resident-status-box smartrent-status-<%= @resident.status %>">
+          <%= @resident.status_text %>
+          <div class="resident-status-bottom resident-status-bottom-<%= @resident.status_text.downcase %>">
+            <span class="glyphicon glyphicon-chevron-down"></span>
+            </div>
+        </div>
+      </div>
+      <div class="col-md-7">
+        <b>Move-in Date:</b> <%= @resident.move_in_date.to_s(:year_month_day) if @resident.move_in_date %><br />
+        <b>SmartRent Months:</b> <%= @resident.total_months %>
+      </div>
+    </div>
+    <div class="clearfix"></div>
+    <div class="col-md-4 resident-box password-reset-request-box">
+      <b>Reset Password Request</b>
+      <br />
+      <div class="password-reset-request-box-content">
+        <p>If resident has lost his password, confirm email below and click on Reset Password Request button.</p>
+        <span class="email skyblue"><%= @resident.email %></span>
+        <%= link_to "Request Password Reset", send_password_reset_information_admin_residents_path(@resident), :class => "btn btn-primary request-password-reset", :remote => true %>
+      </div>
+    </div>
+    <div class="col-md-4 resident-box resident-right-col password-change-form-box">
+      <%= render partial: "password_change_form" %>
+    </div>
+  </div>
 
 
-<%= link_to 'Edit', edit_admin_resident_path(@admin_resident) %> |
-<%= link_to 'Back', admin_residents_path %>
+  <%= link_to 'Edit', edit_admin_resident_path(@resident) %> |
+  <%= link_to 'Back', admin_residents_path %>
+</div>
